manifests/keel.yaml
---
# Source: keel/templates/00-namespace.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: "keel"

---
# Source: keel/templates/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: keel
  namespace: keel
  labels:
    app: keel
    chart: keel-0.7.0
    release: keel
    heritage: Tiller
spec:
  type: LoadBalancer
  ports:
    - port: 9300
      targetPort: 9300
      protocol: TCP
      name: keel
  selector:
    app: keel
  sessionAffinity: None

---
# Source: keel/templates/deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: keel
  namespace: keel
  labels:
    app: keel
    chart: keel-0.7.0
    release: keel
    heritage: Tiller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keel
      release: keel
  template:
    metadata:
      labels:
        app: keel
        release: keel
    spec:
      serviceAccountName: keel
      containers:
        - name: keel
          # Note that we use appVersion to get images tag.
          image: "keelhq/keel:0.14.1"
          imagePullPolicy: IfNotPresent
          command: ["/bin/keel"]
          ports:
            - containerPort: 9300
          livenessProbe:
            httpGet:
              path: /healthz
              port: 9300
            initialDelaySeconds: 30
            timeoutSeconds: 10
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 50m
              memory: 64Mi
